Add withdrawal failure FAQ to q-and-a.mdx

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -35,6 +35,17 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 
 ## Withdrawals FAQ
 
+### Why am I unable to withdraw tokens from my wallet?
+Withdrawals fail when the wallet used does not match the wallet linked to the Land ID. Tokens can only be withdrawn to the wallet associated with the account. Attempting to withdraw with a different wallet will not trigger a transaction.
+
+**Also asked as:**
+- Why is my withdrawal not processing?
+- How do I withdraw tokens to my linked wallet?
+- What happens if I try to withdraw with the wrong wallet?
+- Why does my withdrawal transaction not show up?
+
+---
+
 ### What is the cooldown period after trading an account?  
 After an account is traded, the new owner can continue playing the game but cannot sell items or withdraw assets for 90 days. This cooldown period is designed to prevent multi-account exploitation and ensure fair marketplace activity.  
 
@@ -134,6 +145,17 @@ Changing your IP will not resolve the issue. You must wait the full **two‑week
 
 ## Deposits FAQ
 
+### Why does my wallet transaction fail when I try to deposit from another wallet?
+Deposits from a wallet that is not linked to the Land ID require selecting the “deposit from other wallet” option. Without this selection, the transaction will not appear, as the system only recognizes the linked wallet by default.
+
+**Also asked as:**
+- How do I deposit using a non-linked wallet?
+- Why is my deposit blocked when using a different wallet?
+- What steps are needed to deposit from another wallet address?
+- How do I trigger a deposit transaction from an alternate wallet?
+
+---
+
 ### How can I deposit $FLOWER in‑game?
 Click the **Gem icon**, select **Deposit $FLOWER**, and choose your linked wallet or enter another address.
 
@@ -155,6 +177,17 @@ Only $FLOWER tokens can be deposited into the game. Deposits of other tokens are
 - What crypto tokens are accepted for deposits
 - How do I deposit tokens into SunflowerLand
 - Which tokens are supported for deposits
+
+---
+
+### Why is my wallet transaction not appearing when I try to deposit?
+No transaction appears because the wallet being used is not the one linked to the account. Each Land ID is associated with a specific wallet address. Deposits must be made using the linked wallet, or by selecting the option to deposit from another wallet.
+
+**Also asked as:**
+- Why can’t I see a deposit transaction in my wallet?
+- How do I fix missing wallet transactions when depositing?
+- What causes deposit transactions to fail in Sunflower Land?
+- How do I deposit from a different wallet address?
 
 ---
 
@@ -441,6 +474,28 @@ The game operates across three networks, each requiring its own gas token. Ronin
 - Which network handles $FLOWER deposits and withdrawals  
 - What network is used for Sunflower Land NFT transfers.  
 
+---
+
+### I am unable to get wallet transaction
+Accessing your wallet browser and entering the URL sunflower-land.com/play initiates a forced wallet transaction, ensuring the process is triggered successfully.
+
+**Also asked as:**
+- Why is my wallet transaction not showing?
+- How can I trigger a wallet transaction in Sunflower Land?
+- What should I do if my wallet transaction fails?
+- How do I force a wallet transaction to appear?
+
+---
+
+### Why am I not seeing any wallet transaction when playing the game?
+No wallet transaction appears if the wallet connection is inactive or incorrect. Accessing your wallet browser and entering sunflower-land.com/play forces a wallet transaction to trigger, ensuring the connection is refreshed.
+
+**Also asked as:**
+- Why is my wallet not connecting to Sunflower Land?
+- How do I refresh my wallet transaction in the game?
+- What should I do if no transaction pops up while playing?
+- How can I force a wallet transaction to appear?
+
 ## AboutSFL FAQ
 
 ### Can I reuse Sunflower Land assets in other projects?  
@@ -544,4 +599,141 @@ Chapter 13 is titled **“Crabs & Traps”** and introduces new gameplay content
 - What new features were added in Chapter 13?  
 
 ## Uncatigorized FAQ
+
+### Can I change the wallet linked to my Land ID?
+A linked wallet can be changed if the account has already been minted in the game. Players must use the in-game **Transfer of Ownership** button located in **Settings > Blockchain Settings** to update the wallet address.
+
+**Also asked as:**
+- How do I update my linked wallet?
+- Can I transfer my Land ID to another wallet?
+- What steps are needed to change my wallet address?
+- How do I move my account to a new wallet?
+
+---
+
+### What do I need to do before changing my linked wallet?
+The account must be minted in the game before a wallet change can be made. If the land is not yet minted, players should request assistance through a support ticket to complete the minting process.
+
+**Also asked as:**
+- Why can’t I change my wallet address yet?
+- Do I need to mint my land before transferring ownership?
+- How do I mint my account to enable wallet changes?
+- What is required before updating my linked wallet?
+
+---
+
+### How do I transfer ownership of my account to another wallet?
+Ownership can be transferred using the in-game **Transfer of Ownership** button found under **Settings > Blockchain Settings**. This ensures the new wallet address is properly linked to the Land ID.
+
+**Also asked as:**
+- How do I move my account to a different wallet?
+- What is the process for transferring ownership in-game?
+- Can I assign my Land ID to another wallet?
+- How do I switch my account wallet?
+
+---
+
+### What happens if I transfer ownership outside the game?
+If ownership is transferred using OpenSea or any third-party marketplace instead of the in-game transfer option, the account’s VIP status will be removed.
+
+**Irreversible:** VIP status cannot be restored once lost due to external transfers.
+
+**Also asked as:**
+- Why did I lose VIP status after transferring my land?
+- What happens if I use OpenSea to transfer ownership?
+- Can I keep VIP status if I transfer outside the game?
+- Why is in-game transfer required to retain VIP?
+
+---
+
+### Where can I find the Transfer of Ownership option?
+The Transfer of Ownership option is located in **Settings > Blockchain Settings** within the game interface. This is the only supported method for changing the linked wallet address.
+
+**Also asked as:**
+- How do I access blockchain settings in Sunflower Land?
+- Where is the ownership transfer button located?
+- How do I find the option to change my wallet?
+- What menu contains the transfer of ownership feature?
+
+---
+
+### What should I do if I don’t know how to mint my land?
+Players who are unsure how to mint their land can request assistance by submitting a support ticket. Support staff will guide them through the minting process so they can proceed with wallet changes.
+
+**Also asked as:**
+- How do I get help with minting my land?
+- Who can assist me with minting before ownership transfer?
+- What if I can’t mint my account on my own?
+- How do I contact support for minting issues?
+
+---
+
+### Can I change my wallet address after minting?
+Yes, once the account is minted, the wallet address can be changed using the in-game **Transfer of Ownership** option. This ensures the new wallet is properly linked to the Land ID.
+
+**Also asked as:**
+- Is wallet change possible after minting?
+- How do I update my wallet once my land is minted?
+- Can I transfer ownership after minting my account?
+- What happens to my wallet link after minting?
+
+---
+
+### How do I start playing Sunflower Land?
+Players can create an account at sunflower-land.com/play using either Google login or a Web3 wallet such as MetaMask or Sequence. After account creation, the in-game tutorial guides new farmers through planting crops and basic gameplay.
+
+**Also asked as:**
+- How do I create a Sunflower Land account?
+- What login options are available in Sunflower Land?
+- How do I begin farming in Sunflower Land?
+- Where do I start playing Sunflower Land?
+
+---
+
+### What are the early gameplay steps in Sunflower Land?
+Early gameplay involves planting seeds, harvesting crops, crafting tools, and cooking meals to level up your Bumpkin. Each season introduces new crops, fish, and weather events, encouraging players to expand their island and unlock new regions.
+
+**Also asked as:**
+- What should I do first in Sunflower Land?
+- How do I level up my Bumpkin?
+- What happens during seasons in Sunflower Land?
+- How do I expand my farm?
+
+---
+
+### How does play-to-earn work in Sunflower Land?
+Sunflower Land integrates blockchain mechanics where players earn Sunflower Land Tokens (SFL) and FLOWER ERC20 tokens through farming, crafting, and trading. These tokens can be used in-game or traded externally, forming part of the play-to-earn economy.
+
+**Also asked as:**
+- How do I earn tokens in Sunflower Land?
+- What is the role of SFL in the game?
+- How does FLOWER token work?
+- Can I trade my Sunflower Land rewards?
+
+---
+
+### What is VIP status and how is it obtained?
+VIP status is unlocked by purchasing Gems and redeeming them in-game. VIP provides exclusive perks such as marketplace access, faster progression, and special rewards. It remains tied to the wallet linked to the Land ID.
+
+**Also asked as:**
+- How do I buy VIP in Sunflower Land?
+- What are the benefits of VIP status?
+- Can VIP be transferred to another wallet?
+- Why did I lose VIP after transferring my land?
+
+---
+
+### Why should I avoid buying farms externally?
+Sunflower Land accounts are NFTs that can technically be traded, but purchasing farms through external marketplaces is discouraged. Accounts bought outside the game may be banned or lose items, and VIP status will be removed if ownership is transferred externally.
+
+**Irreversible:** VIP status lost through external transfers cannot be restored.
+
+**Also asked as:**
+- Can I buy a Sunflower Land farm on OpenSea?
+- What are the risks of buying accounts outside the game?
+- Why did my VIP disappear after external transfer?
+- Is it safe to purchase farms from third parties?
+
+
+
 
