Fix typo in Uncategorized FAQ heading

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -18,7 +18,7 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - 🌐 [Network Transactions FAQ](#network-transactions-faq)  
 - 📜 [AboutSFL FAQ](#aboutsfl-faq)
 - 📖 [Chapters FAQ](#chapters-faq)
-- 📖 [Uncatigorized FAQ](#uncategorized-faq)
+- 📖 [Uncategorized FAQ](#uncategorized-faq)
 
 
 🎯 Why this works
@@ -598,7 +598,7 @@ Chapter 13 is titled **“Crabs & Traps”** and introduces new gameplay content
 - What does Chapter 13 include?  
 - What new features were added in Chapter 13?  
 
-## Uncatigorized FAQ
+## Uncategorized FAQ
 
 ### Can I change the wallet linked to my Land ID?
 A linked wallet can be changed if the account has already been minted in the game. Players must use the in-game **Transfer of Ownership** button located in **Settings > Blockchain Settings** to update the wallet address.
