Update Desert Island to Volcano Island in Q&A

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -189,33 +189,32 @@ The Desert Island is the third expansion in Sunflower Land, unlocked after compl
 
 ---
 
-### What is the Desert Island in Sunflower Land?
-The Desert Island is the third expansion in Sunflower Land, unlocked after completing Petal Paradise. It introduces oil production and gem mining, expanding gameplay into advanced resource management. Each stage requires specific Bumpkin levels, resources, and time to unlock, progressively increasing farming capacity and rare resource availability.
+### What is the Volcano Island in Sunflower Land?
+Volcano Island is the fourth and final expansion in Sunflower Land, unlocked after completing the Desert Island. It introduces lava pools and rare volcanic resources, representing the peak of land progression. Each stage requires higher Bumpkin levels, significant resources, and longer expansion times, culminating in maximum farming and mining capacity.
 
 **Stage-by-stage unlocks:**
-- **Bumpkin Level 16:** Unlocks Land 16, requires 700 coins and 80 stone, takes 1 hour, adds +6 crop plots and +1 oil drill.
-- **Bumpkin Level 17:** Unlocks Land 17, requires 800 coins, 90 stone, and 10 iron, takes 2 hours, adds +4 crop plots, +1 gem mine, and +1 tree.
-- **Bumpkin Level 18:** Unlocks Land 18, requires 900 coins, 100 stone, and 15 iron, takes 4 hours, adds +6 crop plots, +1 oil drill, and +1 stone rock.
-- **Bumpkin Level 19:** Unlocks Land 19, requires 1,000 coins, 120 stone, and 20 iron, takes 8 hours, adds +4 crop plots, +1 gem mine, and +1 gold rock.
-- **Bumpkin Level 20:** Unlocks Land 20, requires 1,200 coins, 150 stone, 25 iron, and 1 gold, takes 12 hours, adds +6 crop plots, +1 oil drill, and +1 tree.
-- **Bumpkin Level 21:** Unlocks Land 21, requires 1,500 coins, 200 stone, 30 iron, and 2 gold, takes 16 hours, adds +5 crop plots, +1 gem mine, and +1 stone rock.
+- **Bumpkin Level 22:** Unlocks Land 22, requires 2,000 coins and 250 stone, takes 2 hours, adds +6 crop plots and +1 lava pool.
+- **Bumpkin Level 23:** Unlocks Land 23, requires 2,500 coins, 300 stone, and 20 iron, takes 4 hours, adds +4 crop plots, +1 tree, and +1 lava pool.
+- **Bumpkin Level 24:** Unlocks Land 24, requires 3,000 coins, 350 stone, and 25 iron, takes 8 hours, adds +6 crop plots, +1 gem mine, and +1 lava pool.
+- **Bumpkin Level 25:** Unlocks Land 25, requires 3,500 coins, 400 stone, 30 iron, and 2 gold, takes 12 hours, adds +4 crop plots, +1 tree, and +1 lava pool.
+- **Bumpkin Level 26:** Unlocks Land 26, requires 4,000 coins, 450 stone, 35 iron, and 3 gold, takes 16 hours, adds +6 crop plots, +1 oil drill, and +1 lava pool.
+- **Bumpkin Level 27:** Unlocks Land 27, requires 5,000 coins, 500 stone, 40 iron, and 5 gold, takes 24 hours, adds +5 crop plots, +1 gem mine, and +1 lava pool.
 
 **Final Expansion Capacity:**
 - 31 crop plots  
-- 3 oil drills  
-- 3 gem mines  
-- Additional trees, stone, iron, and gold nodes  
+- Multiple lava pools  
+- Additional gem mines, oil drills, trees, and rare resource nodes  
 
-**Cumulative Requirements:** Approximately 6,100 coins, 740 stone, 100 iron, and 4 gold.  
-**Total Expansion Time:** Roughly 43 hours.
+**Cumulative Requirements:** Approximately 20,000 coins, 2,250 stone, 150 iron, and 11 gold.  
+**Total Expansion Time:** Roughly 66 hours.
 
-**Irreversible:** Once Desert Island is fully expanded, the maximum number of plots, oil drills, gem mines, and resource nodes is fixed and cannot be changed.
+**Irreversible:** Once Volcano Island is fully expanded, the maximum number of plots, lava pools, and resource nodes is fixed and cannot be changed.
 
 **Also asked as:**
-- How do I unlock Desert Island in Sunflower Land?
-- What resources are needed for Desert Island expansion?
-- What does each Bumpkin level unlock in Desert Island?
-- How long does it take to fully expand Desert Island?
+- How do I unlock Volcano Island in Sunflower Land?
+- What resources are needed for Volcano Island expansion?
+- What does each Bumpkin level unlock in Volcano Island?
+- How long does it take to fully expand Volcano Island?
 
 ---
 
