--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -13,6 +13,8 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - ⚠️ [Food lookup Table](#food-lookup-table)
 
 ## Ongoing Issues FAQ
+
+### There is currently an issue with the marketplace, this does affect our withdrawal system as well. We do apogize for the inconvenience this has caused.
 There is currently an issue with the marketplace, this does affect our withdrawal system as well. We do apogize for the inconvenience this has caused.
 
 ## The Team
