Add new page and update Q&A with ban information

--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -4287,3 +4287,78 @@ Developers can follow the guidelines in [CODE_CONTRIBUTING.md](https://github.co
 - Where do I find contribution rules?  
 - Can artists submit new assets?  
 - What are the steps to contribute code?  
+
+## Aboutban
+
+### Will I get banned if I log in with a different account on the same PC or mobile?
+Logging in with multiple accounts on the same device results in a ban. Usage of the same network is permitted only if different devices are used.
+
+**Irreversible:** Once banned for device sharing, the account cannot be restored.
+
+**Also asked as:**  
+- Can I use two accounts on one device?  
+- What happens if I log in multiple accounts on my phone?  
+- Is it allowed to share a PC for different accounts?  
+- Will my account be banned for device sharing?  
+
+### Can I ask someone to do the face verification for my account?
+Face verification must be completed using your own facial data. Using another person’s face or asking someone to verify for you is considered an offense and results in a ban.
+
+**Irreversible:** Accounts banned for fraudulent face verification cannot be reinstated.
+
+**Also asked as:**  
+- Can another person verify my account for me?  
+- Is it allowed to use someone else’s face for verification?  
+- What happens if I bypass face verification?  
+- Will I get banned for using another person’s verification?  
+
+### How many accounts can I play in Sunflower Land?
+Only a single account can be played in Sunflower Land. Permanently changing to a new account is possible only by burning the current account, but casual switching between multiple accounts is prohibited and results in a ban.
+
+**Irreversible:** Once an account is burned, it cannot be recovered.
+
+**Also asked as:**  
+- Can I burn my account to start fresh?  
+- Is it possible to permanently move to a new account?  
+- What happens if I casually switch accounts?  
+- How many accounts are allowed per player?  
+
+### How to burn my account?
+To burn your account, you must send your current account to the designated dead address. Burning an account is a permanent action and should only be done if you are certain, as the account cannot be retrieved once burned.
+
+**Irreversible:** Once an account is burned, it is permanently lost and cannot be restored.
+
+**Also asked as:**  
+- How do I permanently delete my account?  
+- What is the process to burn an account?  
+- Can I move to a new account by burning the old one?  
+- What happens after I send my account to the dead address?  
+
+### I transferred my land to a different wallet address and I am unable to trade. Why?
+A new security measure restricts traded accounts from making withdrawals for 90 days after a land transfer to a different wallet address.
+
+**Irreversible:** The 90-day restriction cannot be bypassed or shortened.
+
+**Also asked as:**  
+- Why can’t I trade after transferring land?  
+- What is the withdrawal restriction after land transfer?  
+- How long is the lock period after moving land?  
+- Why is my account restricted after wallet change?  
+
+### What is funneling?
+Funneling is an activity where multiple accounts send tokens to a single wallet address or use intermediary wallets to consolidate $FLOWER tokens or other tokens.
+
+**Also asked as:**  
+- What does funneling mean in Sunflower Land?  
+- How is funneling detected in the game?  
+- Why is funneling considered an offense?  
+- What counts as funneling activity?  
+
+### Will I get banned if I send tokens to my friend’s wallet address to help him?
+Sending tokens to a friend’s wallet address is not automatically a bannable offense, but it is discouraged. Suspicion may lead to investigation, and if determined to be abuse, all accounts linked to the wallet address may be banned.
+
+**Also asked as:**  
+- Can I transfer tokens to help a friend?  
+- Is sending tokens to another wallet allowed?  
+- Will helping a friend with tokens cause a ban?  
+- What happens if I send tokens to someone else’s wallet?  
