--- a/q-and-a.mdx
+++ b/q-and-a.mdx
@@ -13,8 +13,14 @@ Welcome to the FAQ! Here you’ll find answers grouped into hubs for easier navi
 - ⚠️ [Food lookup Table](#food-lookup-table)
 
 ## Ongoing Issues FAQ
-### There is currently no on-going or known issue.
-There is currently no on-going or known issue.
+### There is currently no on-going or known issue  
+The system is operating normally, and there are no reported or active issues affecting functionality or performance.  
+
+**Also asked as:**  
+- Are there any current issues  
+- Is the system experiencing problems  
+- What is the current status of issues  
+- Are there known issues right now  
 
 ## The Team
 
